Switch to Mongo Implement some basic functionality
