# src/main/java/sk/ardevop/nlp/sksquadmanager/entity/Paragraph.java
@@ -1,0 +1,25 @@
+package sk.ardevop.nlp.sksquadmanager.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.ArrayList;
+import java.util.List;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Document;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Document
+public class Paragraph {
+
+  @Id
+  private String id;
+  private List<Qas> qas = new ArrayList<>();
+  private String context;
+}
+
